# ecmapy

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
ecmapy/: main.py
